<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efefef"
        tools:context="ru.santaev.clipboardtranslator.ui.TranslateFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatTextView
                style="@style/TextSectionStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Язык" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/origin_lang_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="16dp"
                        android:layout_weight="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="Русский"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="1px"
                        android:layout_height="match_parent"
                        android:background="#d1d1d1"></View>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/target_lang_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_weight="1"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:text="Английский"
                        android:textSize="16sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="8dp">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/origin_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="Введите текст"
                    android:minLines="1" />

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatTextView
                    style="@style/TextSectionStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="Перевод" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@android:drawable/list_selector_background"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:tint="#5e5e5e"
                    app:srcCompat="@drawable/ic_favorite_border_black_24dp" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="8dp"
                    android:background="@android:drawable/list_selector_background"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:tint="#5e5e5e"
                    app:srcCompat="@drawable/ic_content_copy_black_24dp" />

            </LinearLayout>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="#7bb000"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:contentPaddingBottom="8dp"
                app:contentPaddingLeft="16dp"
                app:contentPaddingRight="16dp"
                app:contentPaddingTop="8dp">

                <ProgressBar
                    android:id="@+id/translate_progress"
                    style="@style/AppTheme.WhiteAccent"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="top|end" />

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/translated_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:gravity="top"
                    android:hint="Введите текст"
                    android:minLines="1"
                    android:textColor="#fff"
                    android:textColorHint="#72ffffff" />
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </FrameLayout>
</layout>