...
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/originText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@{item.title}"
                    android:textStyle="bold"
                    android:textColor="@color/textColorBlackLight"
                    android:textSize="@dimen/text_size_large" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/targetText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:text="@{item.subtitle}"
                    android:textColor="@color/textColorGrayLight"
...
