...
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottom_navigation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="bottom"
                    android:background="@color/colorPrimary"
                    app:itemBackground="@color/colorPrimary"
                    app:itemIconTint="@color/colorAccent"
                    app:itemTextColor="@color/colorAccent"
                    app:menu="@menu/main_bottom_menu" />

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/view_pager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_above="@+id/bottom_navigation"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

...
